src/sass/layout/_categories.scss
.section-categories {
    width: 356px;
    max-height: 472px;
    overflow-x: hidden;
    overflow-y: auto;
}

.list-categories {
    list-style: none;
}

.category__item {
    margin-top: 32px;
}

.category__link,
.category__link-all {
    text-decoration: none;
    font-weight: 400;
    font-size: 18px;
    line-height: 1.33;
    letter-spacing: -0.02em;
    color: $secondary-text-color;

    .dark-theme & {
        color: $secondary-text-color-darkt;
    }
}

.current-category {
    font-weight: 700;
    font-size: 18px;
    line-height: 1.33;
    letter-spacing: -0.02em;
    text-transform: uppercase;
    color: $accent-text-color;

    .dark-theme & {
        color: $primary-accent-color
    }
}

.category-books-list {

    @media screen and (min-width: 768px) {
        display: flex;
        flex-wrap: wrap;
        gap: 40px 25px;
        margin-top: 40px;
    }

    @media screen and (min-width: 1440px) {
        column-gap: 24px;
    }
}

.category-books__item {
    list-style: none;
    width: 100%;
    margin-bottom: 40px;

    @media screen and (min-width: 768px) {
        width: calc((100% - 2*25px)/3);
    }

    @media screen and (min-width: 1440px) {
        width: calc((100% - 4*24px)/5);
    }

}

.category-books__img-thumb {
    aspect-ratio: 2/3;
    object-fit: cover;
    display: flex;
    position: relative;
    overflow: hidden;
    border-radius: 8px;
    margin-bottom: 14px;
    // border: 1px solid $secondary-text-color-darkt;
    box-shadow: inset 6px 0 5px 5px #0005;
    // box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.1),
    //     0px 1px 1px 0px rgba(0, 0, 0, 0.1), 0px 1px 1px -1px rgba(0, 0, 0, 0.1);
}

.category-books__img {
    width: 100%;
    object-fit: cover;
    overflow: hidden;
    border-radius: 8px;
    display: block;
    z-index: -1;

    @media screen and (min-width: 768px) {
        min-width: 216px;
        min-height: 318px;
    }

    @media screen and (min-width: 1440px) {
        min-width: 180px;
        width: 100%;
        min-height: 256px;
        height: 100%;

    }
}

.card-overlay {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    // height: 70px;
    transform: translateY(30%);
    opacity: 0;
    background-color: $primary-accent-color;
    // transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
    // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
    text-align: center;
    padding: 26px 0;
    text-transform: uppercase;

}

.category-books__link {
    text-decoration: none;
}

.category-books__link:hover .card-overlay {
    transform: translateY(0);
    opacity: 1;
}


.category-books__title {
    font-weight: 700;
    font-size: 16px;
    line-height: 1.12;
    letter-spacing: -0.04em;
    margin-bottom: 4px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    color: var(--primary-dark);


    .dark-theme & {
        color: $primary-text-color-darkt;
    }
}

.category-books__author {
    font-style: italic;
    font-size: 12px;
    line-height: 1.17;
    letter-spacing: -0.04em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    color: $tertiary-text-color-darkt;

}

.books-cards__title {
    font-weight: 700;
    font-size: 48px;
    line-height: 1.08;
    letter-spacing: -0.04em;
}

.books-cards__title-accent {
    color: $accent-text-color;
}

.dark-theme .books-cards__title {
    color: $logo-color-darkt;
}

